--- a/Wonders.css
+++ b/Wonders.css
@@ -37,6 +37,8 @@ h2{
 }
 nav a{
 	display: inline;
+	margin:0 auto;
+	width:auto;
 	margin-left:4.8%;
 	text-decoration: none;
 	border-style: solid;
