--- a/Wonders.css
+++ b/Wonders.css
@@ -71,8 +71,7 @@ nav a:hover{/*Pseudo classes*/
 	height: 400px;
 	
 }
-.WebContainer{
-    width:100%;
-    min-width:1000px;
-    height:auto;
+.main-nav {
+  display: flex;
 }
+
