--- a/Wonders.css
+++ b/Wonders.css
@@ -1,6 +1,7 @@
 body{
 	margin: 0;
-	padding: 0;
+	padding: 1%;
+	padding-bottom: 3%;
 	background-image: url('wonders.jpg');
 }
 header{ 
@@ -74,12 +75,17 @@ nav a:hover{/*Pseudo classes*/
 	color: #0006CC;
 	border-radius: 50px;
 	width: 50px;
-	transition-delay: .5s;
+	transition-delay: .3s;
 	
 }
 .wonders2{
 	z-index: 100;
 }
+.wonders3{
+	margin-right: 100px;
+	margin-right: 300px;
+}
+
 
 
 
