--- a/Wonders.css
+++ b/Wonders.css
@@ -4,6 +4,29 @@ body{
 	padding-bottom: 3%;
 	background-image: url('wonders.jpg');
 }
+.loader{
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	background: white;
+	height: 100%;
+	width: 110%;
+	display: flex;
+	justify-content: center;
+	
+	align-items: center;
+	background-position: center;
+	background-size: cover;
+}
+.disppear{
+	animation: vanish 1s forwards;
+}
+@keyframes vanish{
+	100%{
+		opacity: 0;
+		visibility: hidden;
+	}
+}
 header{ 
 	background: linear-gradient(#FFE082,#FFFFFF);
 	text-align: center;
@@ -12,7 +35,7 @@ header{
 }
 h1{
 	text-align: center;
-	font-size: 50px;
+	font-size: 240%;
 	color: #b66a4de6;
 }
 p{
@@ -82,13 +105,15 @@ nav a:hover{/*Pseudo classes*/
 	color: #0006CC;
 	border-radius: 50px;
 	width: 50px;
-	transition-delay: .3s;
-	
+	transition-delay: .3s ease;
+	border-radius: 100%;
 }
-.wonders2{
+/* .wonders2{
 	z-index: 100;
-	height: 100%;
-}
+	text-align: center;
+	padding: 10%;
+	height: 120%;
+} */
 .wonders3{
 	text-align: center;
 }
@@ -98,24 +123,78 @@ nav a:hover{/*Pseudo classes*/
 .table{
 	display: table;
 	margin: 0 auto;
+	width: 80%;
+	height: 60%;
+	padding-bottom: 5%;
 }
-ul#horizontal-list{
+#horizontal-list{
 	min-width: 696px;
 	list-style: none;
 	padding-top: 20px;
+	border-radius: 100%;
 }
-ul#horizontal-list li{
+ul li{
 	display: inline-block;
+	margin-left:4% ;
 }
 a{
 	border-style: solid;
 	background:linear-gradient(#7FFFD4,#FFFFFF);
 	text-decoration: none;
 	border-width: 1px;
-	padding: 1%;
-	display: inline-block;
+	display: block;
+	font-size: 85%;
 	width: 90px;
-	margin-left:1.5%;
-	margin-right:1.5%;
+	border-radius: 30%;
+	padding: 10%;
 		
+}
+.wonders2{
+	text-align: center;
+	font-size: 66%;
+	height: 60%;
+	width: 105%;
+	padding-top: 14%;
+	padding-bottom: 11.5%;
+}
+@media screen and (max-width:1900px){
+	h1{
+		font-size: 350%;
+	}
+}
+@media screen and (max-width:806px){
+	h1{
+		font-size: 320%;
+	}
+}
+@media screen and (max-width:664px){
+	h1{
+		font-size: 280%;
+	}
+
+}
+@media screen and (max-width:639px){
+	h1{
+		font-size: 270%;
+	}
+}
+@media screen and (max-width:529px){
+	h1{
+		font-size: 230%;
+	}
+}
+@media screen and (max-width:500px){
+	h1{
+		font-size: 250%;
+	}
+}
+@media screen and (max-width:400px){
+	h1{
+		font-size: 211.10%;
+	}
+}
+@media screen and (max-width:330px){
+	h1{
+		font-size: 182%;
+	}
 }
